--- a/public/accelerator_dashboard/stakeholder_management/index.html
+++ b/public/accelerator_dashboard/stakeholder_management/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="../../configurations/common.css">
     <script src="js/index.js"></script>
+    
     <script src="js/mobile_functions.js"></script>
     <script src="../../configurations/local_dbfunctions.js"></script>
 
@@ -94,7 +95,7 @@
                     <div id="divider"></div>
                     <div id="stakeholder_type_holder_header_holder">
                         <div id="stakeholder_type_holder_header">Stakeholders</div>
-                        <i class="fa-solid fa-circle-plus" onclick="location.replace('../../onboarding/index.html')">
+                        <i class="fa-solid fa-circle-plus" onclick="location.replace('../../onboarding/index2.html')">
                         </i>
                     </div>
                     <div>
