--- a/public/onboarding/index.html
+++ b/public/onboarding/index.html
@@ -254,7 +254,7 @@
                 title="Choose Stakeholder Type"
                 id="stakeholder_type"
                 class="selectpicker bm">
-                <option value="1">Own Company</option>
+                <option value="own-company">Own Company</option>
                 <option value="startup">Startup</option>
                 <option value="innovador">Entreprenuer / Innovator</option>
                 <option value="univerisity/college/research_center">
@@ -289,6 +289,39 @@
                   class="bm"
                   data-live-search="true"
                   title="Select Main Operating Sector"></select>
+              </div>
+
+              <div
+                class="stakeholder_details"
+                id="own-company"
+                style="display: none">
+                <div class="input-group mb-3">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text" id="basic-addon1"
+                      >Brand Name</span
+                    >
+                  </div>
+                  <input
+                    type="text"
+                    class="form-control startup"
+                    name="brand_name"
+                    id="brand_name"
+                    placeholder="Brand Name" />
+                </div>
+
+                <div class="input-group mb-3">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text" id="basic-addon1"
+                      >Website</span
+                    >
+                  </div>
+                  <input
+                    type="text"
+                    class="form-control startup"
+                    name="website"
+                    id="website"
+                    placeholder="Website" />
+                </div>
               </div>
 
               <div
