--- a/public/onboarding/loginnsign/signup.html
+++ b/public/onboarding/loginnsign/signup.html
@@ -64,7 +64,7 @@
             </a>
 
             <a
-              value="univerisity/college/research_center"
+              value="univerisity/college/research_center/incubation center"
               onclick="handle_change(this.id)"
               class="usertype"
               id="University-College-Research Center">
@@ -81,7 +81,7 @@
               </div>
             </a>
 
-            <a
+            <!-- <a
               value="incubation_center"
               onclick="handle_change(this.id)"
               class="usertype"
@@ -94,7 +94,7 @@
                   typesetting industry.
                 </p>
               </div>
-            </a>
+            </a> -->
 
             <a
               value="fund-vc-pe"
@@ -126,7 +126,7 @@
               </div>
             </a>
 
-            <a
+            <!-- <a
               value="venture_partner"
               onclick="handle_change(this.id)"
               class="usertype"
@@ -139,7 +139,7 @@
                   typesetting industry.
                 </p>
               </div>
-            </a>
+            </a> -->
           </div>
         </div>
       </div>
